fix background-size issue on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,6 @@ body {
     background-attachment: fixed;
     background-position: top;
     height: 95vh;
-    width: auto;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -236,6 +235,11 @@ body {
     background-image: url('../media/about-zanzibar.jpg');
 }
 
+@media (max-width: 767.98px) {
+    .jumbotron {
+        background-attachment: scroll;
+    }
+} 
 
 /*------------All Cards-----------*/
 
